# dynamo-stream

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: error.rs  lib.rs  main.rs  notification.rs  state.rs  utils.rs
src/channel/: consumer.rs  event.rs  mod.rs  stream.rs
src/client/: dynamodb.rs  mock.rs  mod.rs
src/config/: file.rs  mod.rs
src/dynamodb/: lineage.rs  lineages.rs  mod.rs  shard.rs  stream.rs
src/dynamodb/client/: dynamodb.rs  mod.rs
src/dynamodb/stream/: builder.rs  mod.rs
src/dynamodb/types/: attribute_value.rs  identity.rs  mod.rs  operation_type.rs  record.rs  records.rs  shard_iterator_type.rs  stream_record.rs  stream_status.rs  stream_view_type.rs
src/error/: http.rs  mod.rs
src/extractors/: json.rs  mod.rs
src/notification/: event.rs  mod.rs
src/routes/: root.rs
src/state/: channel.rs  entry.rs  mod.rs  notification.rs  subscription.rs
src/states/: mod.rs  subscriptions.rs
src/stream/: client.rs  mock.rs  mod.rs  notification.rs  record.rs
src/stream/client/: dynamodb.rs  mod.rs
src/stream/notification/: mod.rs
src/stream/types/: mod.rs  shard.rs
src/types/: entry.rs  mod.rs  record.rs  shard.rs
src/web/: mod.rs  state.rs
src/web/config/: file.rs  mod.rs
src/web/config/test/: invalid.yml  valid.yml
src/web/error/: http.rs  mod.rs
src/web/extractor/: mod.rs
src/web/extractors/: json.rs
src/web/listener/: builder.rs  mod.rs
src/web/route/: mod.rs  root.rs
src/web/routes/: root.rs
src/web/state/: app.rs  mod.rs
src/web/subscription/: builder.rs  mod.rs
