[package]
name = "dynamo-stream"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "create_table"

[[bin]]
name = "put_item"

[[bin]]
name = "stream_arn"

[dependencies]
async-trait = "0.1"
aws-config = "0.57.1"
aws-sdk-dynamodb = "0.35.0"
aws-sdk-dynamodbstreams = "0.35.0"
axum = "0.6"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "rt", "time"] }
tower-http = { version = "0.4", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
ulid = "1.1"

[dev-dependencies]
serde_json = "1.0"
