[package]
name = "dynamo-stream"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "create_table"
test = false
bench = false

[[bin]]
name = "put_item"
test = false
bench = false

[dependencies]
anyhow = "1.0"
async-recursion = "1.0"
aws-config = "0.57.2"
aws-sdk-dynamodb = "0.36"
aws-sdk-dynamodbstreams = "0.36"
axum = "0.6"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "rt", "time"] }
tower-http = { version = "0.4", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
ulid = "1.1"
validator = { version = "0.16", features = ["derive"] }

[dev-dependencies]
hyper = "0.14"
itertools = "0.12"
tower = "0.4"
